# ECE6605J_FA2024_Project

./: README.md
affine_transform/: CMakeLists.txt
affine_transform/104P/: README.md
affine_transform/104P/104Algo/: CMakeLists.txt  field_operations.cpp  lut_math.cpp
affine_transform/104P/104Algo/include/: field_operations.h  lut_math.h
affine_transform/104P/104Core/: CMakeLists.txt  image.hpp  mask.cpp  mask_iterator.cpp  point.cpp  shape.cpp
affine_transform/104P/104Core/include/: i_iterable_mask.h  image.h  mask.h  mask_iterator.h  matrix.h  point.h  shape.h
affine_transform/104P/104IO/: CMakeLists.txt  io_utility.cpp
affine_transform/104P/104IO/include/: io_utility.h
affine_transform/MSAS/: CMakeLists.txt  README.md  affine_patch_distance.cpp  ellipse_normalization.cpp  structure_tensor.cpp  structure_tensor_bundle.cpp
affine_transform/MSAS/include/: affine_patch_distance.h  array_deleter.h  distance_info.h  ellipse_normalization.h  grid_info.h  normalized_patch.h  structure_tensor.h  structure_tensor_bundle.h
affine_transform/SimilarityMapApp/: CMakeLists.txt  main.cpp
affine_transform/SimilarityMapApp/include/: io_helpers.h
affine_transform/StructureTensorApp/: CMakeLists.txt  main.cpp
affine_transform/StructureTensorApp/include/: io_helpers.h
bm3d/: bm3d.py  bm3d_1st_step.py  bm3d_2nd_step.py  bm3d_generate_test_estimated_denoised_images.py  bm3d_med.py  bm3d_process_data.py  precompute_BM_zzy.py  utils.py
bm3d/tmp/: check_integrity.py  check_kaiser.ipynb  custom_attention.py  net_check.ipynb  scunet.py  swinunetr.py  tmp.py
deep_learning/: calc_psnr_ssim_from_png.py  generate_noisy_images.py
deep_learning/nbnet++/: main.py  main.sh  nbnet_final.py  nbnet_old.py  test.sh  utils.py
deep_learning/restormer_orig/: main.py  main.sh  restormer.py  test.sh  utils.py
